--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             
                 
                 <div class="imgContact d-flex jcc">
-                    <img src="img/self.jpg" alt="照片">
+                    <img src="img/self.jpeg" alt="照片">
                     <h3 class="engName engfont white">Jeremiah Chen</h3>
                 </div>
             </div>
