--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>陳汶豪 Jeremiah</title>
+
+    <!-- 待更新 -->
+    <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
+    <meta name="description" content="網頁描述,網頁描述">
+    <meta property="og:image" content="社群圖片預覽">
+    <meta property="og:description" content="社群網頁描述">
+    <meta property="og:title" content="社群標題">
+    <!-- 待更新 -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/all.css">
     <script src="https://kit.fontawesome.com/dcd6eccd9c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/all.css">
+   
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="js/all.js"></script>
 </head>
