影視作品、其他經歷草稿

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <!-- 大圖像 -->
-    <div class="banner" style="padding-top: 220px;">
+    <div class="banner bg-white" style="padding-top: 220px;">
         <!-- <img src="" alt=""> -->
         <h2 style="font-size: 50px;text-align: center;">大圖像</h2>
     </div>
@@ -80,7 +80,6 @@
                     </ul>
                 </div>
             
-                
                 <div class="imgContact d-flex jcc">
                     <img src="img/self.jpeg" alt="照片">
                     <h3 class="engName engfont white">Jeremiah Chen</h3>
