--- a/script.html
+++ b/script.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dcd6eccd9c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/all.css">
    
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -111,21 +112,21 @@
             <ul class="d-flex jcsb">
                 <li>
                     <img src="https://fakeimg.pl/270x200/">
-                    <div class="content p-4 d-flex column jcsb">
+                    <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>一個闖空門的小偷，碰到一個自殺女生的故事。<br><span class="fwb">——《偷光》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </li>
                 <li>
                     <img src="https://fakeimg.pl/270x200/">
-                    <div class="content p-4 d-flex column jcsb">
+                    <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>為了在無良射擊攤上獲勝，青年把子彈射向老闆的故事。<br><span class="fwb">——《Shoot》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </li>
                 <li>
                     <img src="https://fakeimg.pl/270x200/">
-                    <div class="content p-4 d-flex column jcsb">
+                    <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>一個會偷拍客人的旅館經理，某天愛女也被同樣對待後。反省並對抗這種惡行的故事。<br><span class="fwb">——《回》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
                     </div>
