--- a/layout.html
+++ b/layout.html
@@ -25,31 +25,33 @@
 <body>
     <div class="header">
         <div class="container d-flex jcsb aic pl-5">
+            <!-- 待放圖 -->
             <a href="index.html" class="d-block"><h1>陳汶豪 Jeremiah</h1></a>
+            <!-- 待放圖end -->
             <ul class="pcNavbar d-flex jcfe fwb">
-                <li><a href="index.html" class="mr-2 ml-2 p-3 d-block white">首頁</a></li>
-                <li><a href="script.html" class="mr-2 ml-2 p-3 d-block white">劇本集</a></li>
-                <li><a href="portfolio.html" class="mr-2 ml-2 p-3 d-block white">作品集</a></li>
+                <li><a href="index.html" class="mr-2 ml-2 p-3 d-block white">關於我</a></li>
+                <li><a href="script.html" class="mr-2 ml-2 p-3 d-block white">劇本/點評</a></li>
+                <li><a href="portfolio.html" class="mr-2 ml-2 p-3 d-block white">影視作品</a></li>
+                <li><a href="experience.html" class="mr-2 ml-2 p-3 d-block white">其他經歷</a></li>
             </ul>
             <ul class="mobileNavbar fwb tac">
-                <li><a href="index.html" class="mr-2 ml-2 p-3 d-block white">首頁</a></li>
-                <li><a href="script.html" class="mr-2 ml-2 p-3 d-block white">劇本集</a></li>
-                <li><a href="portfolio.html" class="mr-2 ml-2 p-3 d-block white">作品集</a></li>
+                <li><a href="index.html" class="p-4 d-block white">關於我</a></li>
+                <li><a href="script.html" class="p-4 d-block white">劇本/點評 </a></li>
+                <li><a href="portfolio.html" class="p-4 d-block white">影視作品</a></li>
+                <li><a href="experience.html" class="p-4 d-block white">其他經歷</a></li>
             </ul>
             <a href="#" class="mobileNavbarIcon"><i class="fas fa-bars fz-l p-3 white"></i></a>
         </div>
     </div>
     
-    <div class="main">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eius aut aliquam quisquam exercitationem iure molestias laudantium. Eos, molestias nesciunt. Blanditiis vitae beatae veniam non, earum architecto amet maxime neque.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque incidunt ducimus corporis quasi voluptatem, facere recusandae magni, porro aut consequatur cum. Consequuntur libero tempora cupiditate obcaecati maiores odit, dolores fuga.
-    </div>
+    <!-- main -->
+    <!-- main end -->
 
     <a href="#" class="backToTop"><img src="img/icon.svg" alt="backtotop"></a>
 
-    <div class="footer-bg">
-        <ul class="footer m0-a pt-3 pb-3 tac white">
-            <li class="mb-2">TEL: <a href="tel:0928389160" class="white">0928389160</a></li>
+    <div class="bg-footer">
+        <ul class="footer m0-a p-footer tac white">
+            <li class="mb-4">TEL: <a href="tel:0928389160" class="white">0928389160</a></li>
             <li>EMAIL: <a href="mailto:jeremiah.302916@gmail.com" class="white">jeremiah.302916@gmail.com</a></li>
         </ul>
     </div>
