--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>陳汶豪 作品集</title>
+    <title>陳汶豪 Jeremiah</title>
+
+    <!-- 待更新 -->
+    <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
+    <meta name="description" content="網頁描述,網頁描述">
+    <meta property="og:image" content="社群圖片預覽">
+    <meta property="og:description" content="社群網頁描述">
+    <meta property="og:title" content="社群標題">
+    <!-- 待更新 -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dcd6eccd9c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/all.css">
+   
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="js/all.js"></script>
 </head>
 <body>
+    <div class="header">
+        <div class="container d-flex jcsb aic pl-5">
+            <!-- 待放圖 -->
+            <a href="index.html" class="d-block"><h1>陳汶豪 Jeremiah</h1></a>
+            <!-- 待放圖end -->
+            <ul class="pcNavbar d-flex jcfe fwb">
+                <li><a href="index.html" class="mr-2 ml-2 p-3 d-block white">關於我</a></li>
+                <li><a href="script.html" class="mr-2 ml-2 p-3 d-block white">劇本/點評</a></li>
+                <li><a href="portfolio.html" class="mr-2 ml-2 p-3 d-block white">影視作品</a></li>
+                <li><a href="experience.html" class="mr-2 ml-2 p-3 d-block white">其他經歷</a></li>
+            </ul>
+            <ul class="mobileNavbar fwb tac">
+                <li><a href="index.html" class="p-4 d-block white">關於我</a></li>
+                <li><a href="script.html" class="p-4 d-block white">劇本/點評 </a></li>
+                <li><a href="portfolio.html" class="p-4 d-block white">影視作品</a></li>
+                <li><a href="experience.html" class="p-4 d-block white">其他經歷</a></li>
+            </ul>
+            <a href="#" class="mobileNavbarIcon"><i class="fas fa-bars fz-l p-3 white"></i></a>
+        </div>
+    </div>
     
+    <!-- main -->
+    <div class="portfolio pt-16 pb-16">
+        <div class="intro intro-1 d-flex jcsb m0-a">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wJQ9ig_d8yY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="content column ml-10 d-flex">
+                <a href="https://www.youtube.com/embed/wJQ9ig_d8yY"><h3 class="mb-10 fwb">Yoasobi / 2019-2021</h3></a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quis repellendus eaque itaque blanditiis corporis, voluptatem earum est ad, impedit tempore, minima ut consectetur inventore possimus ducimus consequuntur veniam ex.</p>
+            </div>
+        </div>
+        <div class="bg-blue">
+            <div class="intro intro-2 d-flex jcsb m0-a">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wJQ9ig_d8yY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="content column ml-10">
+                    <a href="https://www.youtube.com/embed/wJQ9ig_d8yY"><h3 class="mb-10 fwb">Yoasobi / 2019-2021</h3></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quis repellendus eaque itaque blanditiis corporis, voluptatem earum est ad, impedit tempore, minima ut consectetur inventore possimus ducimus consequuntur veniam ex.</p>
+                </div>
+            </div>
+        </div>
+        <div class="intro intro-3 d-flex jcsb m0-a">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wJQ9ig_d8yY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="content column ml-10">
+                <a href="https://www.youtube.com/embed/wJQ9ig_d8yY"><h3 class="mb-10 fwb">Yoasobi / 2019-2021</h3></a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quis repellendus eaque itaque blanditiis corporis, voluptatem earum est ad, impedit tempore, minima ut consectetur inventore possimus ducimus consequuntur veniam ex.</p>
+            </div>
+        </div>
+    </div>
+    <!-- main end -->
+
+    <a href="#" class="backToTop"><img src="img/icon.svg" alt="backtotop"></a>
+
+    <div class="bg-footer">
+        <ul class="footer m0-a p-footer tac white">
+            <li class="mb-4">TEL: <a href="tel:0928389160" class="white">0928389160</a></li>
+            <li>EMAIL: <a href="mailto:jeremiah.302916@gmail.com" class="white">jeremiah.302916@gmail.com</a></li>
+        </ul>
+    </div>
 </body>
 </html>
