--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@
     <title>陳汶豪 Jeremiah</title>
 
     <!-- 待更新 -->
-    <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
+    <!-- <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
     <meta name="description" content="網頁描述,網頁描述">
     <meta property="og:image" content="社群圖片預覽">
     <meta property="og:description" content="社群網頁描述">
-    <meta property="og:title" content="社群標題">
+    <meta property="og:title" content="社群標題"> -->
     <!-- 待更新 -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,10 +56,10 @@
             </div>
         </div>
         <div class="bg-blue">
-            <div class="intro intro-2 d-flex jcsb m0-a">
+            <div class="intro intro-2 d-flex jcsb m0-a ">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wJQ9ig_d8yY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="content column ml-10">
-                    <a href="https://www.youtube.com/embed/wJQ9ig_d8yY"><h3 class="mb-10 fwb">Yoasobi / 2019-2021</h3></a>
+                <div class="content column ml-10 white">
+                    <a href="https://www.youtube.com/embed/wJQ9ig_d8yY"><h3 class="mb-10 fwb"><span class="white">Yoasobi / 2019-2021</span></h3></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quis repellendus eaque itaque blanditiis corporis, voluptatem earum est ad, impedit tempore, minima ut consectetur inventore possimus ducimus consequuntur veniam ex.</p>
                 </div>
             </div>
