--- a/experience.html
+++ b/experience.html
@@ -6,11 +6,11 @@
     <title>陳汶豪 Jeremiah</title>
 
     <!-- 待更新 -->
-    <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
+    <!-- <meta name="keywords" content="網頁關鍵字,網頁關鍵字">
     <meta name="description" content="網頁描述,網頁描述">
     <meta property="og:image" content="社群圖片預覽">
     <meta property="og:description" content="社群網頁描述">
-    <meta property="og:title" content="社群標題">
+    <meta property="og:title" content="社群標題"> -->
     <!-- 待更新 -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
