--- a/script.html
+++ b/script.html
@@ -113,21 +113,23 @@
         <div class="logline d-flex m0-a p-normal">
             <ul class="d-flex jcsb">
                 <li>
-                    <img src="https://fakeimg.pl/270x200/">
+                    <div class="img-1"></div>
                     <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>一個闖空門的小偷，碰到一個自殺女生的故事。<br><span class="fwb">——《偷光》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </li>
                 <li>
-                    <img src="https://fakeimg.pl/270x200/">
+                    <div class="img-2"></div>
+                    <!-- <img src="https://fakeimg.pl/270x200/"> -->
                     <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>為了在無良射擊攤上獲勝，青年把子彈射向老闆的故事。<br><span class="fwb">——《Shoot》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </li>
                 <li>
-                    <img src="https://fakeimg.pl/270x200/">
+                    <div class="img-3"></div>
+                    <!-- <img src="https://fakeimg.pl/270x200/"> -->
                     <div class="content p-4 d-flex column jcsb bg-white">
                         <h3>一個會偷拍客人的旅館經理，某天愛女也被同樣對待後。反省並對抗這種惡行的故事。<br><span class="fwb">——《回》</span></h3>
                         <a href="#" class="d-block p-2 white tac bg-lightgreen">點我前往&nbsp;&nbsp;<i class="fas fa-arrow-circle-right"></i></a>
